# GitBasics

./: GitBasics.sln  README.md
.github/workflows/: Cmake.yml
Ansi.cpp/: Ansi.cpp.vcxproj  Ansi.cpp.vcxproj.filters  TestAnsi.cpp
GitBasics/: Ansi.h  CMakeLists.txt  GitBasics.cpp  GitBasics.vcxproj  GitBasics.vcxproj.filters  Html.h
TestHtml/: TestHtml.cpp  TestHtml.vcxproj  TestHtml.vcxproj.filters
